dynamodel_tests/tests/ui/fails/enum_newtype_optional.rs
use dynamodel::Dynamodel;

#[derive(Dynamodel)]
enum NewType {
    Str(Option<String>),
}

fn main() {}
